feat: change build .xml

--- a/TaskManager/nbproject/project.properties
+++ b/TaskManager/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\libraries\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\libraries\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.json-20200518.jar=..\\libraries\\json-20200518.jar
 file.reference.sqljdbc42.jar=..\\libraries\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.json-20200518.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
