--- a/TaskManager/web/WEB-INF/web.xml
+++ b/TaskManager/web/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         <filter-class>filter.LoginFilter</filter-class>
         <init-param>
             <param-name>excludedUrls</param-name>
-            <param-value>/webfonts,/css,/js,/images,/login,/register</param-value>
+            <param-value>/webfonts,/css,/js,/images,/login,/register,/fonts</param-value>
         </init-param>
     </filter>
     <filter-mapping>
