--- a/TaskManager/web/WEB-INF/web.xml
+++ b/TaskManager/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>controller.LogoutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CreateBoardServlet</servlet-name>
+        <servlet-class>controller.CreateBoardServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -51,5 +55,9 @@
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreateBoardServlet</servlet-name>
+        <url-pattern>/createBoard</url-pattern>
     </servlet-mapping>
 </web-app>
