--- a/TaskManager/web/WEB-INF/web.xml
+++ b/TaskManager/web/WEB-INF/web.xml
@@ -40,6 +40,22 @@
         <servlet-name>CreateBoardServlet</servlet-name>
         <servlet-class>controller.CreateBoardServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>BoardServlet</servlet-name>
+        <servlet-class>controller.BoardServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ListTaskServlet</servlet-name>
+        <servlet-class>controller.ListTaskServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CardServlet</servlet-name>
+        <servlet-class>controller.CardServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CheckListServlet</servlet-name>
+        <servlet-class>controller.CheckListServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -59,5 +75,21 @@
     <servlet-mapping>
         <servlet-name>CreateBoardServlet</servlet-name>
         <url-pattern>/createBoard</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BoardServlet</servlet-name>
+        <url-pattern>/board</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListTaskServlet</servlet-name>
+        <url-pattern>/list</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CardServlet</servlet-name>
+        <url-pattern>/card</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CheckListServlet</servlet-name>
+        <url-pattern>/checkList</url-pattern>
     </servlet-mapping>
 </web-app>
